# emas

./: .gitignore  README.md
backend/: Cargo.toml  readme.md
backend/migrations/: 20250713180708_init.up.sql
backend/src/: handle.rs  main.rs  model.rs
db/: Cargo.toml
db/migrations/: 0001_schema.sql
db/src/: main.rs
emas/: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/components/: Dashboard-Header.svelte  header.svelte
frontend/src/lib/: app.html  index.ts
frontend/src/lib/components/: ApiKeysTable.svelte  CreateApiKey.svelte  MetricsAndLogs.svelte  Sidebar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
p2pmsg/: package-lock.json  package.json
p2pmsg/src/components/: Dashboard-Header.svelte  footer.svelte  header.svelte
p2pmsg/src/routes/: +layout.svelte  +page.svelte
p2pmsg/src/routes/Dashboard/: +page.svelte
p2pmsg/src/routes/chatDash/: +page.svelte
