[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4"}
chrono = "0.4.41"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = "0.8.6"
sqlx-cli = "0.8.6"
tokio = {version = "1.46.1", features = ["full"]}
tower-http = { version = "0.6.6", features = ["full"] }
uuid = "1.17.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3"
validator = {version = "0.20.0", features = ["derive"]}


